 * Upgraded Java driver to 2.1.2 version and fixed deprecation warnings.
   Use correct protocolVersion when serializing/deserializing Cassandra columns.
 * Don't fail with "contact points contain multiple datacenters"
   if one or more of the nodes given as contact points don't have DC information,
   because they are unreachable.
 * Fixed #395 - removed annoying slf4j warnings when running tests

1.1.0 beta 1
 * Redesigned Java API, some refactorings (#300)
 * Simplified AuthConf - more responsibility on CassandraConnectionFactory
 * Enhanced and improved performance of the embedded Kafka framework
    - Kafka consumer and producer added that are configurable
    - Kafka shutdown cleaned up
    - Kafka server more configurable for speed and use cases
 * Added new word count demo and a new Kafka streaming word count demo
 * Modified build file to allow easier module id for usages of 'sbt project'


1.1.0 alpha 4
 * Use asynchronous prefetching of multi-page ResultSets in CassandraRDD
   to reduce waiting for Cassandra query results.
 * Make token range start and end be parameters of the query, not part of the query
   template to reduce the number of statements requiring preparation.
 * Added type converter for GregorianCalendar (#334)

1.1.0 alpha 3
 * Pluggable mechanism for obtaining connections to Cassandra
   Ability to pass custom CassandraConnector to CassandraRDDs (#192)
 * Provided a row reader which allows to create RDDs of pairs of objects as well
   as RDDs of simple objects handled by type converter directly;
   added meaningful compiler messages when invalid type was provided (#88)
 * Fixed serialization problem in CassandraSQLContext by making conf transient (#310)
 * Cleaned up the SBT assembly task and added build documentation (#315)

1.1.0 alpha 2
 * Upgraded Apache Spark to 1.1.0.
 * Upgraded to be Cassandra 2.1.0 and Cassandra 2.0 compatible.
 * Added spark.cassandra.connection.local_dc option