@@ -6,7 +6,9 @@
  * Don't fail with "contact points contain multiple datacenters"
    if one or more of the nodes given as contact points don't have DC information,
    because they are unreachable.
- * Fixed #395 - removed annoying slf4j warnings when running tests
+ * Removed annoying slf4j warnings when running tests (#395)
+ * CassandraRDD is fully lazy now - initialization no longer fetches Cassandra
+   schema (#339).
 
 1.1.0 beta 1
  * Redesigned Java API, some refactorings (#300)
